--- a/.github/workflows/automated.yml
+++ b/.github/workflows/automated.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           echo "Checking for syntax errors or undefined names..."
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          echo "flake8 exit code: $?"
 
       - name: Run tests with pytest
         run: |
